cabal-version:      3.0
name:               ldh-cli
version:            0.1.0.0
synopsis:           A command line client for Linked Data Hub in Haskell.
-- description:
homepage:           timmciver.com
license:            MIT
license-file:       LICENSE
author:             Tim McIver
maintainer:         tim@timmciver.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   lib
    default-language: GHC2021

executable ldh-cli
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        ldh-cli

    hs-source-dirs:   app
    default-language: GHC2021
